<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/forecastList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/main_padding">

        <Switch
            android:id="@+id/switchersystem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/metric" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/currentWeather"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/switchersystem"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/dateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="01.01.1970"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/cityName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="City"
                    android:textSize="36sp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/degreeText"
                    android:layout_width="wrap_content"
                    android:textSize="24sp"
                    android:layout_height="wrap_content"
                    tools:text = "Degrees"
                    android:layout_gravity="center_horizontal"/>

                <ImageView
                    android:id="@+id/weatherIcon"
                    android:layout_width="@dimen/list_weather_icon_size"
                    android:layout_height="@dimen/list_weather_icon_size"
                    android:contentDescription="@string/weather_icon_description"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/weatherStatus"
                    android:layout_width="wrap_content"
                    android:textSize="24sp"
                    android:layout_height="wrap_content"
                    tools:text = "@string/status"
                    android:layout_gravity="center_horizontal"/>

                <CheckBox
                    android:id="@+id/favoriteBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:buttonTint="?colorOnSecondary"
                    android:text="@string/favorite"
                    android:button="@drawable/selector_check"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/imageIcons"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/currentWeather"
            android:weightSum="3" >

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/humidityIcon"
                android:layout_width="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_height="180dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:tint="?colorOnSecondary"
                        android:src="@drawable/humidity"
                        android:contentDescription="@string/weather_icon_description" />

                    <TextView
                        android:id="@+id/humidityText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/humidty"
                        android:textAppearance="?attr/textAppearanceBody2" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/windIcon"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_height="180dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:src="@drawable/wind"
                        android:tint="?colorOnSecondary"
                        android:contentDescription="@string/weather_icon_description" />

                    <TextView
                        android:id="@+id/windText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"

                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/wind"
                        android:textAppearance="?attr/textAppearanceBody2" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/maxTempIcon"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="180dp"
                android:layout_marginBottom="@dimen/materialCardMarginBottom"
                android:layout_marginTop="@dimen/materialCardMarginTop"
                android:layout_margin="@dimen/materialCardMargin"
                app:cardCornerRadius="@dimen/materialCardCorenrRadius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:tint="?colorOnSecondary"
                        android:layout_height="@dimen/iconheight"
                        android:src="@drawable/sun"
                        android:contentDescription="@string/weather_icon_description" />

                    <TextView
                        android:id="@+id/maxTempText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:textAppearance="?attr/textAppearanceHeadline6" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/max_temperature"
                        android:textAppearance="?attr/textAppearanceBody2" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favoriteRecylceView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageIcons"
            android:scrollbars="vertical">
        </androidx.recyclerview.widget.RecyclerView>

    </RelativeLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/loadingSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />


    <TextView
        android:id="@+id/emptyStateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/main_padding"
        android:text="@string/empty_state_message" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/darkmodeswitch"
        android:layout_width="wrap_content"
        android:background="?colorOnPrimary"
        android:tint="?colorOnSecondary"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_margin="@dimen/floatingbuttonmargin"
        android:src="@drawable/ic_baseline_wb_sunny_24"
        android:contentDescription="@string/weather_icon_description" />

</FrameLayout>